# rust-playground

./: README.md
benchmarking/benches/: input_output.rs
benchmarking/src/: lib.rs
binary_tree/: Cargo.toml  README.md
binary_tree/src/: lib.rs  main.rs
books/: README.md
books/command_line_rust/: README.md
books/command_line_rust/catr/: Cargo.toml
books/command_line_rust/catr/src/: main.rs
books/command_line_rust/catr/tests/: cli.rs
books/command_line_rust/echor/: Cargo.toml
books/command_line_rust/headr/: Cargo.toml
books/command_line_rust/headr/src/: config.rs  lib.rs  main.rs
books/command_line_rust/headr/tests/: cli.rs  make-outputs.sh
books/command_line_rust/headr/tests/expected/: all.c1.out  all.c2.out  all.c4.out  all.n2.out  all.n4.out  all.out
books/command_line_rust/hello/: Cargo.toml
books/command_line_rust/uniqr/: Cargo.toml
books/command_line_rust/uniqr/src/: lib.rs  main.rs
books/command_line_rust/wcr/: Cargo.toml
books/official_rust_book/: README.md
books/official_rust_book/averaged_collection/: Cargo.toml
books/official_rust_book/error_handling/: Cargo.toml
books/official_rust_book/hello_cargo/: Cargo.toml
books/official_rust_book/minigrep/: Cargo.toml  poem.txt
books/official_rust_book/restaurant/: Cargo.toml
books/oreilly_rust/: README.md
books/oreilly_rust/enums_and_patterns/: Cargo.toml
books/oreilly_rust/fundamental_types/: Cargo.toml
books/oreilly_rust/iterators_custom/: Cargo.toml
books/oreilly_rust/quickreplace/: Cargo.toml  output.txt
books/oreilly_rust/strings_and_text/: Cargo.toml
books/oreilly_rust/traits_and_generics/: Cargo.toml
books/rust_by_example/: README.md
books/rust_for_rustaceans/: README.md
cli/: README.md
command_line_rust/catr/: Cargo.toml
command_line_rust/catr/src/: lib.rs
command_line_rust/echor/: Cargo.toml
command_line_rust/hello/: Cargo.toml
custom_types/src/: main.rs
data/: voyage-of-the-beagle.txt
dice_roller/: Cargo.toml
dice_roller/benches/: benchmark.rs
dice_roller/src/: lib.rs  main.rs
fixed_point/: Cargo.toml
fixed_point/src/: lib.rs  main.rs
gtk4_hello/: Cargo.toml
gui/gtk4_hello/: Cargo.toml
hello/: hello.rs
huhu/: Cargo.toml  README.md
huhu/src/: lib.rs  main.rs
huhu/tests/: test_cli.rs
mandelbrot/: Cargo.toml  animate.py
mandelbrot/src/: lib.rs  main.rs
morse_trainer/: Cargo.toml  README.md
morse_trainer/src/: lib.rs  main.rs
networking/ntp/: Cargo.toml  README.md
oreilly_rust/: README.md
oreilly_rust/euclid/: Cargo.toml
oreilly_rust/euclid_webserver/: Cargo.toml
oreilly_rust/mandelbrot/: animate.py
python/: README.md
python/adder/: Cargo.toml  pyproject.toml
rust_by_example/: README.md
rust_by_example/binding_and_types/: Cargo.toml
rust_by_example/custom_types/: Cargo.toml
snakes_and_ladders/: Cargo.toml
snakes_and_ladders/src/: lib.rs  main.rs
temp/: Cargo.toml
temp/src/: main.rs
text/regex_examples/: Cargo.toml
text/word_count/: Cargo.toml
text/word_count_bstr/: Cargo.toml
(+164 files in other folders)
