
[package]
name = "mandelbrot"
version = "0.2.0"
edition = "2021"
authors = ["Leon Matthews"]
description = """
    Mandlebrot example from O'Reilly 'Programming Rust' book 2nd
    Edition, typed-in and modified by me.
"""
homepage = "https://lost.co.nz/"


[dependencies]
crossbeam = "0.8"
image = "0.13.0"
num = "0.4"
num_cpus = "1.16"
