[package]
name = "echor"
description = "Rust implementation of GNU coreutils 'echo' command"
authors = ["Leon Matthews"]
homepage = "https://lost.co.nz/"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4", features = ["derive"] }


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
