
[package]
name = "headr"
description = "Rust implementation of GNU coreutils 'head' command"
authors = ["Leon Matthews"]
homepage = "https://lost.co.nz/"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo"] }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
rand = "0.8"
