
[package]
name = "uniqr"
description = "Rust implementation of GNU coreutils 'uniq' command"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rand = "0.8"
tempfile = "3.12"
